# AoC26

python/: README.md  all_days.py  single_day.py
python/solutions/: day01.py  day02.py
python/src/aoc26/solutions/: day01.py  here.py
python/src/aoc26/utils/: decorators.py  input.py
python/utils/: decorators.py  input.py
rust/: Cargo.toml  README.md  justfile
rust/day-01/: Cargo.toml
rust/day-01/benches/: part1.rs  part2.rs
rust/day-01/src/: part1.rs
rust/day-02/: Cargo.toml
rust/day-02/benches/: bench_main.rs
rust/day-02/src/: part1.rs  part2.rs
rust/day-03/: Cargo.toml
rust/day-03/benches/: part1.rs  part2.rs
rust/day-03/src/: part1.rs  part2.rs
rust/day-04/: Cargo.toml
rust/day-04/benches/: part1.rs  part2.rs
rust/day-04/src/: part1.rs  part2.rs
rust/day-05/: Cargo.toml
rust/day-05/src/: lib.rs  part1.rs  part2.rs
rust/day-06/: Cargo.toml
rust/day-06/src/: part1.rs  part2.rs
rust/day-07/: Cargo.toml
rust/day-07/src/: part1.rs  part2.rs
rust/day_template/: Cargo.toml
rust/day_template/benches/: bench_main.rs  part1.rs  part2.rs
rust/day_template/src/: lib.rs  part1.rs  part2.rs
