[workspace]
members = [
    "day-*",
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
]
default-members = ["day-*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
criterion = "0.8.1"
itertools = "0.14.0"
ndarray = "0.17.1"
nom = "8.0.0"
rstest = "0.26"
tracing = "0.1.41"

[workspace.dependencies.reqwest]
version = "0.13.1"
features = ["blocking"]

[workspace.dependencies.test-log]
version = "0.2.19"
features = ["trace"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]
