[package]
name = "day-03"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-03-bench"
path = "benches/bench_main.rs"
harness = false

[features]
session-required = []